--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FuturisticPortfolio</title>
+  <title>Shantanu Kanade</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -22,6 +22,16 @@
 </body>
 
 <script>
+  // document.addEventListener('contextmenu', e => e.preventDefault());
+
+  // document.addEventListener('keydown', e => {
+  //   if (e.key === 'F12' ||
+  //     (e.ctrlKey && e.shiftKey && ['I', 'J', 'C'].includes(e.key)) ||
+  //     (e.ctrlKey && e.key === 'U')) {
+  //     e.preventDefault();
+  //   }
+  // });
+
   if (window.innerWidth > 500) {
     const cursor = document.querySelector('.custom-cursor');
     const trail = document.querySelector('.cursor-trail');
