--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
   <title>Shantanu Kanade</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Portfolio of Shantanu Kanade – Angular & Frontend Developer. View projects, skills, resume, and contact info.">
+  <!-- RECOMMENDED META TAGS -->
+  <meta property="og:title" content="Shantanu Kanade | Angular Developer Portfolio">
+  <meta property="og:description"
+    content="Explore the futuristic portfolio of Shantanu Kanade – a skilled Angular & Frontend Developer.">
+  <meta property="og:image" content="https://shantanukanade.com/assets/preview.png">
+  <meta property="og:url" content="https://shantanukanade.com">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link
     href="https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600&family=Exo+2:wght@400;700&family=Share+Tech+Mono&display=swap"
