Updated portfolio site

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Shantanu Kanade</title>
+  <title>Shantanu Kanade | Angular Developer | Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
@@ -23,6 +23,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-dC2C+dlJAHtRRGVpmEU/xnKJXN4uW3zH9MTN7zceHV/hRnYaFy1s3H1VfQfbq2JZGz2TCV6r5eY+NiRyNltL4g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Shantanu Kanade",
+        "url": "https://shantanukanade.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/shantanukanade-sk"
+        ],
+        "jobTitle": "Frontend Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Zestorm Technologies Pvt. Ltd."
+        }
+      }
+      </script>
+
 </head>
 
 <body>
