--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <meta property="og:url" content="https://shantanukanade.com">
   <meta name="twitter:card" content="summary_large_image">
 
+  <base href="/My-portfolio/">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link
     href="https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600&family=Exo+2:wght@400;700&family=Share+Tech+Mono&display=swap"
